# Yatsaury

./: .env.example  .gitignore  DESIGN.md  IMPLEMENTATION_PROGRESS.md  Makefile  README.md  config.example.toml  pyproject.toml
examples/: sirah_sample.txt
src/yatsaury/: __init__.py  __main__.py  cache.py  cli.py  config.py  models.py  pipeline.py
src/yatsaury/exporters/: base.py  jsonl.py  review_csv.py
src/yatsaury/generators/: base.py  qa.py  rag.py
src/yatsaury/llm/: client.py  prompts.py
src/yatsaury/processing/: chunk.py  clean.py
src/yatsaury/quality/: dedup.py  verify.py
src/yatsaury/schemas/: __init__.py  alpaca.py  base.py  chatml.py  completion.py  qa.py  rag.py  raw.py  sharegpt.py
src/yatsaury/session/: models.py  store.py
src/yatsaury/sources/: base.py  pdf.py  text.py  url.py
src/yatsaury/web/: app.py  (+3 more)
tests/: conftest.py  helpers.py  test_cache.py  test_chunk.py  test_clean.py  test_cli_config_show.py  test_cli_generate.py  test_cli_generate_session.py  test_cli_inspect.py  test_cli_schemas_multi.py  test_cli_smoke.py  test_cli_verify_export.py  test_cli_web.py  test_config.py  test_dedup.py  test_dry_run.py  test_e2e_generate.py  test_embeddings_dedup.py  test_exporters_jsonl.py  test_generators_qa.py  test_generators_rag.py  test_llm_client.py  test_models.py  test_pipeline.py  test_quote_check.py  test_resolve_loader.py  test_review_csv.py  test_schemas.py  test_session_persistence.py  test_session_store.py  test_sources_pdf.py  test_sources_text.py  test_sources_url.py  test_verify_judge.py  test_web_app.py  test_web_jobs.py
