[project]
name = "yatsaury"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings[toml]>=2.0",
    "openai>=1.0",
    "tenacity>=8.0",
    "tiktoken>=0.7",
    "PyMuPDF>=1.24",
    "pypdf>=4.0",
    "trafilatura>=1.9",
    "httpx>=0.27",
    "datasets>=2.0",
    "rapidfuzz>=3.0",
    "nicegui>=1.4",
    "rich>=13.0",
    "python-ulid>=2.0",
]

[project.scripts]
yatsaury = "yatsaury.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yatsaury"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring external services (deselect with -m 'not e2e')"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
